--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
       <input type="text" id="translationInput" name="translationInput"/>
     </div>
     <button type="button" id="addButton">Добавить</button>
+
+  </div>
+  <div class="buttons">
+    <button type="button" id="againButton">Заново</button>
+    <button type="button" id="deleteButton">Удалить карточки</button>
+  </div>
+  <div class="cards">
+    <div class="card active" id="">
+      <label class="front hide">test</label>
+      <label class="back">тест</label>
+    </div>
+    <div class="card" id="">
+      <label class="front">test</label>
+      <label class="back hide">тест</label>
+    </div>
+    <div class="card" id="">
+      <label class="front">test</label>
+      <label class="back hide">тест</label>
+    </div>
+    <div class="card" id="">
+      <label class="front">test</label>
+      <label class="back hide">тест</label>
+    </div>
+    <div class="card" id="">
+      <label class="front">test</label>
+      <label class="back hide">тест</label>
+    </div>
+    <div class="card" id="">
+      <label class="front">test</label>
+      <label class="back hide">тест</label>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
